# nmini

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
script/: nminis
src/: main.rs  utils.rs
